--- a/packages/common-starknet/test/project_1.0.0.yaml
+++ b/packages/common-starknet/test/project_1.0.0.yaml
@@ -4,7 +4,7 @@ name: 'uniswap-v3'
 version: '0.0.1'
 runner:
   node:
-    name: '@subql/node-ethereum'
+    name: '@subql/node-starknet'
     version: '*'
   query:
     name: '@subql/query'
