--- a/packages/common-starknet/test/project_1.0.0.yaml
+++ b/packages/common-starknet/test/project_1.0.0.yaml
@@ -1,6 +1,6 @@
 specVersion: '1.0.0'
 
-name: 'uniswap-v3'
+name: 'starknet-subql-starter'
 version: '0.0.1'
 runner:
   node:
@@ -9,20 +9,20 @@ runner:
   query:
     name: '@subql/query'
     version: '*'
-description: 'This project can be use as a starting point for developing your new Ethereum SubQuery project'
-repository: 'https://github.com/subquery/ethereum-subql-starter'
+description: 'This project can be use as a starting point for developing your new Starknet SubQuery project'
+repository: 'https://github.com/subquery/starknet-subql-starter'
 
 schema:
   file: './schema.graphql'
 
 network:
   #  endpoint: "fill it in"
-  chainId: '1'
-  dictionary: 'https://eth-dict.api.onfinality.io/'
-  endpoint: 'wss://eth.api.onfinality.io/ws?apikey='
+  chainId: '0x534e5f4d41494e'
+  dictionary: 'https://strk-dict.api.onfinality.io/'
+  endpoint: 'https://free-rpc.nethermind.io/mainnet-juno/v0_7'
 
 dataSources:
-  - kind: ethereum/Runtime
+  - kind: starknet/Runtime
     startBlock: 12369621
     options:
       # Must be a key of assets
@@ -43,12 +43,12 @@ dataSources:
       file: './dist/index.js'
       handlers:
         - handler: handlePoolCreated
-          kind: ethereum/LogHandler
+          kind: starknet/LogHandler
           filter:
             topics:
-              - PoolCreated(address indexed token0, address indexed token1, uint24 indexed fee, int24 tickSpacing, address pool)
-    # ethereum/contract
-  - kind: ethereum/Runtime
+              - PoolCreated
+    # starknet/contract
+  - kind: starknet/Runtime
     startBlock: 12369651
     options:
       abi: NonfungiblePositionManager
@@ -66,28 +66,28 @@ dataSources:
       file: './dist/index.js'
       handlers:
         - handler: handleIncreaseLiquidity
-          kind: ethereum/LogHandler
+          kind: starknet/LogHandler
           filter:
             topics:
-              - IncreaseLiquidity (uint256 tokenId, uint128 liquidity, uint256 amount0, uint256 amount1)
+              - IncreaseLiquidity
         - handler: handleDecreaseLiquidity
-          kind: ethereum/LogHandler
+          kind: starknet/LogHandler
           filter:
             topics:
-              - DecreaseLiquidity (uint256 tokenId, uint128 liquidity, uint256 amount0, uint256 amount1)
+              - DecreaseLiquidity
         - handler: handleCollect
-          kind: ethereum/LogHandler
+          kind: starknet/LogHandler
           filter:
             topics:
-              - Collect (uint256 tokenId, address recipient, uint256 amount0, uint256 amount1)
+              - Collect
         - handler: handleTransfer
-          kind: ethereum/LogHandler
+          kind: starknet/LogHandler
           filter:
             topics:
-              - Transfer (address from, address to, uint256 tokenId)
+              - Transfer
 templates:
   - name: Pool
-    kind: ethereum/Runtime
+    kind: starknet/Runtime
     options:
       abi: Pool
     assets:
@@ -101,27 +101,27 @@ templates:
       file: './dist/index.js'
       handlers:
         - handler: handleInitialize
-          kind: ethereum/LogHandler
+          kind: starknet/LogHandler
           filter:
             topics:
-              - Initialize (uint160,int24)
+              - Initialize
         - handler: handleSwap
-          kind: ethereum/LogHandler
+          kind: starknet/LogHandler
           filter:
             topics:
-              - Swap (address sender, address recipient, int256 amount0, int256 amount1, uint160 sqrtPriceX96, uint128 liquidity, int24 tick)
+              - Swap
         - handler: handleMint
-          kind: ethereum/LogHandler
+          kind: starknet/LogHandler
           filter:
             topics:
-              - Mint(address sender, address owner, int24 tickLower, int24 tickUpper, uint128 amount, uint256 amount0, uint256 amount1)
+              - Mint
         - handler: handleBurn
-          kind: ethereum/LogHandler
+          kind: starknet/LogHandler
           filter:
             topics:
-              - Burn(indexed address,indexed int24,indexed int24,uint128,uint256,uint256)
+              - Burn
         - handler: handleFlash
-          kind: ethereum/LogHandler
+          kind: starknet/LogHandler
           filter:
             topics:
-              - Flash(indexed address,indexed address,uint256,uint256,uint256,uint256)
+              - Flash
