--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/node-starknet",
-  "version": "0.0.1",
+  "version": "0.0.2-0",
   "description": "",
   "author": "Jay Ji",
   "license": "GPL-3.0",
@@ -59,5 +59,6 @@
   "files": [
     "/dist",
     "/bin"
-  ]
+  ],
+  "stableVersion": "0.0.1"
 }
