--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/types-starknet",
-  "version": "0.0.2-0",
+  "version": "0.0.2-1",
   "description": "",
   "homepage": "https://github.com/subquery/subql",
   "repository": "github:subquery/subql",
@@ -20,5 +20,6 @@
     "@starknet-io/types-js": "latest",
     "@subql/types-core": "^1.1.1",
     "starknet": "^6.11.0"
-  }
+  },
+  "stableVersion": "0.0.2-0"
 }
