--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -26,7 +26,7 @@
     "@nestjs/schedule": "^3.0.1",
     "@subql/common": "^5.2.2",
     "@subql/common-starknet": "workspace:*",
-    "@subql/node-core": "^16.1.0",
+    "@subql/node-core": "16.1.1-1",
     "@subql/testing": "^2.2.2",
     "@subql/types-starknet": "workspace:*",
     "cacheable-lookup": "6",
