--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/node-starknet",
-  "version": "0.0.2-9",
+  "version": "5.7.0",
   "description": "",
   "author": "Jay Ji",
   "license": "GPL-3.0",
