--- a/packages/common-starknet/package.json
+++ b/packages/common-starknet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/common-starknet",
-  "version": "0.0.2-3",
+  "version": "5.7.0",
   "description": "",
   "scripts": {
     "build": "rm -rf dist && tsc -b",
