--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/node-starknet",
-  "version": "5.7.0",
+  "version": "5.7.1-0",
   "description": "",
   "author": "Jay Ji",
   "license": "GPL-3.0",
@@ -60,5 +60,5 @@
     "/dist",
     "/bin"
   ],
-  "stableVersion": "0.0.2-9"
+  "stableVersion": "5.7.0"
 }
