--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/node-starknet",
-  "version": "5.7.1-0",
+  "version": "5.7.1",
   "description": "",
   "author": "Jay Ji",
   "license": "GPL-3.0",
@@ -59,6 +59,5 @@
   "files": [
     "/dist",
     "/bin"
-  ],
-  "stableVersion": "5.7.0"
+  ]
 }
