--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/types-starknet",
-  "version": "1.0.1-0",
+  "version": "1.0.1",
   "description": "",
   "homepage": "https://github.com/subquery/subql",
   "repository": "github:subquery/subql",
@@ -20,6 +20,5 @@
     "@starknet-io/types-js": "latest",
     "@subql/types-core": "^2.0.0",
     "starknet": "^6.11.0"
-  },
-  "stableVersion": "1.0.0"
+  }
 }
