--- a/packages/common-starknet/package.json
+++ b/packages/common-starknet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/common-starknet",
-  "version": "1.0.2",
+  "version": "1.0.3-0",
   "description": "",
   "scripts": {
     "build": "rm -rf dist && tsc -b",
@@ -34,5 +34,6 @@
     "@types/rimraf": "3.0.2",
     "ejs": "3.1.10",
     "lodash": "4.17.21"
-  }
+  },
+  "stableVersion": "1.0.2"
 }
