--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -19,14 +19,14 @@
     "subql-node-starknet": "./bin/run"
   },
   "dependencies": {
-    "@nestjs/common": "^9.4.0",
-    "@nestjs/core": "^9.4.0",
+    "@nestjs/common": "^11.0.10",
+    "@nestjs/core": "^11.0.10",
     "@nestjs/event-emitter": "^2.0.0",
-    "@nestjs/platform-express": "^9.4.0",
-    "@nestjs/schedule": "^3.0.1",
+    "@nestjs/platform-express": "^11.0.10",
+    "@nestjs/schedule": "^5.0.1",
     "@subql/common": "^5.4.0",
     "@subql/common-starknet": "workspace:*",
-    "@subql/node-core": "16.1.1-1",
+    "@subql/node-core": "^17.0.2",
     "@subql/testing": "^2.2.2",
     "@subql/types-starknet": "workspace:*",
     "cacheable-lookup": "6",
@@ -42,8 +42,8 @@
     "@subql/utils": "*"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^9.2.0",
-    "@nestjs/testing": "^9.4.0",
+    "@nestjs/schematics": "^11.0.1",
+    "@nestjs/testing": "^11.0.10",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
