--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/types-starknet",
-  "version": "1.0.3-0",
+  "version": "1.0.3-1",
   "description": "",
   "homepage": "https://github.com/subquery/subql",
   "repository": "github:subquery/subql",
@@ -21,5 +21,5 @@
     "@subql/types-core": "^2.0.2",
     "starknet": "^6.11.0"
   },
-  "stableVersion": "1.0.2"
+  "stableVersion": "1.0.3-0"
 }
