--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/node-starknet",
-  "version": "5.8.1-0",
+  "version": "5.9.0",
   "description": "",
   "author": "Jay Ji",
   "license": "GPL-3.0",
@@ -26,7 +26,7 @@
     "@nestjs/schedule": "^5.0.1",
     "@subql/common": "^5.4.0",
     "@subql/common-starknet": "workspace:*",
-    "@subql/node-core": "^17.0.2",
+    "@subql/node-core": "^17.1.0",
     "@subql/testing": "^2.2.2",
     "@subql/types-starknet": "workspace:*",
     "cacheable-lookup": "6",
@@ -59,6 +59,5 @@
   "files": [
     "/dist",
     "/bin"
-  ],
-  "stableVersion": "5.8.0"
+  ]
 }
