--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,6 @@
 changesetBaseRefs:
   - main
-  - origin/main
+  - starknet/main
 
 enableImmutableInstalls: false
 
@@ -22,7 +22,7 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
     spec: "@yarnpkg/plugin-version"
 
-yarnPath: .yarn/releases/yarn-3.1.1.cjs
+yarnPath: .yarn/releases/yarn-3.2.4.cjs
 
 changesetIgnorePatterns:
-  - '.yarn/**/*'
+  - ".yarn/**/*"
