--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/node-starknet",
-  "version": "6.0.1",
+  "version": "6.0.2",
   "description": "",
   "author": "Jay Ji",
   "license": "GPL-3.0",
@@ -57,7 +57,17 @@
     "node-fetch": "2.6.7"
   },
   "files": [
+    "/bin",
     "/dist",
-    "/bin"
+    "!/dist/**/*.spec.js",
+    "!/dist/**/*.spec.d.ts",
+    "!/dist/**/*.spec.js.map",
+    "!/dist/**/*.test.js",
+    "!/dist/**/*.test.d.ts",
+    "!/dist/**/*.test.js.map",
+    "package.json",
+    "README.md",
+    "CHANGELOG.md",
+    "LICENSE"
   ]
 }
