--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "typescript": "^5.5.4"
   },
   "resolutions": {
-    "node-fetch": "2.6.7",
-    "starknet-io/types-js": "0.7.10"
+    "node-fetch": "2.6.7"
   },
   "scripts": {
     "build": "yarn workspaces foreach -ptA run build",
