--- a/packages/common-starknet/package.json
+++ b/packages/common-starknet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/common-starknet",
-  "version": "1.2.2",
+  "version": "1.2.3-0",
   "description": "",
   "scripts": {
     "build": "rm -rf dist && tsc -b",
@@ -47,5 +47,6 @@
     "README.md",
     "CHANGELOG.md",
     "LICENSE"
-  ]
+  ],
+  "stableVersion": "1.2.2"
 }
