--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/node-starknet",
-  "version": "6.0.2",
+  "version": "6.0.3-0",
   "description": "",
   "author": "Jay Ji",
   "license": "GPL-3.0",
@@ -69,5 +69,6 @@
     "README.md",
     "CHANGELOG.md",
     "LICENSE"
-  ]
+  ],
+  "stableVersion": "6.0.2"
 }
