--- a/packages/common-starknet/package.json
+++ b/packages/common-starknet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/common-starknet",
-  "version": "1.2.3-0",
+  "version": "1.2.3-1",
   "description": "",
   "scripts": {
     "build": "rm -rf dist && tsc -b",
@@ -48,5 +48,5 @@
     "CHANGELOG.md",
     "LICENSE"
   ],
-  "stableVersion": "1.2.2"
+  "stableVersion": "1.2.3-0"
 }
