--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/node-starknet",
-  "version": "6.0.3-1",
+  "version": "6.1.0",
   "description": "",
   "author": "Jay Ji",
   "license": "GPL-3.0",
@@ -68,6 +68,5 @@
     "README.md",
     "CHANGELOG.md",
     "LICENSE"
-  ],
-  "stableVersion": "6.0.3-0"
+  ]
 }
