--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/types-starknet",
-  "version": "1.2.2-0",
+  "version": "1.3.0",
   "description": "",
   "homepage": "https://github.com/subquery/subql",
   "repository": "github:subquery/subql",
@@ -28,6 +28,5 @@
   "dependencies": {
     "@subql/types-core": "^2.1.0",
     "starknet": "^7.6.2"
-  },
-  "stableVersion": "1.2.1"
+  }
 }
