--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/node-starknet",
-  "version": "6.1.0",
+  "version": "6.1.1-0",
   "description": "",
   "author": "Jay Ji",
   "license": "GPL-3.0",
@@ -68,5 +68,6 @@
     "README.md",
     "CHANGELOG.md",
     "LICENSE"
-  ]
+  ],
+  "stableVersion": "6.1.0"
 }
