--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/types-starknet",
-  "version": "1.3.0",
+  "version": "1.3.1-0",
   "description": "",
   "homepage": "https://github.com/subquery/subql",
   "repository": "github:subquery/subql",
@@ -28,5 +28,6 @@
   "dependencies": {
     "@subql/types-core": "^2.1.0",
     "starknet": "^8.6.0"
-  }
+  },
+  "stableVersion": "1.3.0"
 }
